<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <EditText
        android:id="@+id/bedsavai"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/no_of_beds_available"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/oxyavai"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/oxygen_availability"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/bedsavai"
        app:layout_constraintTop_toBottomOf="@+id/bedsavai" />

    <EditText
        android:id="@+id/covpatients"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/no_of_covid_patients"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/oxyavai"
        app:layout_constraintTop_toBottomOf="@+id/oxyavai" />

    <EditText
        android:id="@+id/nodoctors"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/no_of_doctors"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/covpatients"
        app:layout_constraintTop_toBottomOf="@+id/covpatients" />

    <EditText
        android:id="@+id/ambulance"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/ambulance_availabilyty"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/nodoctors"
        app:layout_constraintTop_toBottomOf="@+id/nodoctors" />

    <Button
        android:id="@+id/updatedetails"
        android:layout_width="160dp"
        android:layout_height="51dp"
        android:background="@drawable/hslbutton"
        android:fontFamily="sans-serif-condensed-medium"
        android:includeFontPadding="true"
        android:onClick="updatedetails"
        android:text="@string/update_details"
        app:backgroundTint="@drawable/hslbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />
</androidx.constraintlayout.widget.ConstraintLayout>
